syntax = "proto3";

package engula.v1;

message Value {
  oneof value {
    bytes blob_value = 1;
    string text_value = 2;
    sint64 int64_value = 3;
    uint64 uint64_value = 4;
    double float64_value = 5;
    // decimal_value = 6;
    MappingValue mapping_value = 14;
    RepeatedValue repeated_value = 15;
  }
}

message MappingValue {
  RepeatedValue keys = 1;
  RepeatedValue values = 2;
}

message RepeatedValue {
  repeated Value values = 1;
  repeated bytes blob_values = 2;
  repeated string text_values = 3;
  repeated sint64 int64_values = 4;
}
